# SLIC6104HD

./: SC6104HD_Partlist.xlsx
Cam/etc/: inittab  profile
Cam/etc/init.d/: rcS
Cam/tmp/: resolv.conf
Chassis/: bracket.SLDPRT  bracket.STL  bracket_rear.SLDPRT  bracket_rear.STL  bracket_smf.SLDPRT  bracket_smf.STL
Chassis/Big/: 38board.SLDPRT  38camboard.SLDPRT  B0.SLDPRT  B0.STL  B1_L.SLDPRT  B1_L.STL  B1_R.SLDPRT  B1_R.STL  B2.SLDPRT  B2.STL  B3.SLDPRT  B4.SLDPRT  Bolt_3.SLDPRT  Bolt_B6.SLDPRT  CAM_BODY.SLDASM  HEAD.SLDASM  Packing.SLDPRT  Support3pi_M2_0_10_0.SLDPRT  Support3pi_M2_3_12_0.SLDPRT  Support3pi_M2_3_20_0.SLDPRT  Support3pi_M2_3_30_0.SLDPRT  Support3pi_M2_3_34.SLDPRT  Support3pi_M2_3_5_0.SLDPRT  Support3pi_M2_5_12_0.SLDPRT  Support5pi_M3_0_30_0 - Copy.SLDPRT  air_blow.SLDPRT  air_blow.STL  bracket.DWG  bracket.SLDDRW  bracket.SLDPRT  bracket.STEP  bracket.STL  bracket_other.SLDPRT  bracket_other.STL  bracket_rear.DWG  bracket_rear.SLDDRW  bracket_rear.SLDPRT  bracket_rear.STEP  bracket_rear.STL  fan_support.SLDPRT  (+10 more)
Document/: FirmwareModification.docx  SC6104_series_webpage_manual.docx  SC6104_spec.docx  piacs_for_doc.pptx  ~WRL2128.tmp
Manual/: SC6104_series_webpage_manual.docx
Reference/: 500万黑光全彩智能高清网络摄像机38模组-新.docx  500万黑光全彩智能高清网络摄像机38模组.docx  CSIPC-E70TS3N16M5C_V3.1.10Sweb_Build20244252058.rom  CSIPC-E70TS3N16M5C_V3.1.6Sweb_Build20241282153.rom  CSIPC-E70TS3N16M5C_V3.1.8Sweb_Build20241301148.rom  NETSDK_LINUX_x86_64_V2.1_2023-05-05.7z  Webpage 수정안_1.pptx  telnet.txt  web_mod_1.pptx  ~$0万黑光全彩智能高清网络摄像机38模组-新.docx  ~$义智能摄像机_网页使用说明书V1.07.docx  초저조도 카메라 라이업 기획안.docx  카메라의 저조도모드.docx
Reference/NETSDK_LINUX_x86_64_V2.1_2023-05-05/demo/: Makefile  Makefile--  Makefile-hisiv300  Mutex.cpp  Mutex.h  config.cfg  configlib.cpp  configlib.h  demo_test  main.cpp  readme.txt  replay_20220507_100000.h265  replay_20220507_110000.h265
Reference/release_client_yssdk_v20230617/client_yssdk/: CMakeLists.txt  CompChain.cmake  PlatformCfg.cmake  readme.txt
Reference/release_client_yssdk_v20230617/client_yssdk/doc/: Network Camera_SDK_V1.2.docx  ~$摄像机_YSSDK_V1.2.docx  网络摄像机_YSSDK_V1.2.docx
Reference/release_client_yssdk_v20230617/client_yssdk/include/: ipsdk_client.h  ipsdk_data_def.h  ipsdk_debug.h  ipsdk_def_type.h  ipsdk_erp.h
Reference/release_client_yssdk_v20230617/client_yssdk/include/sys/: system.h
Reference/release_client_yssdk_v20230617/client_yssdk/lib/Windows/x64/Release/: yssdk_client.lib
Reference/release_client_yssdk_v20230617/client_yssdk/lib/Windows/x86/Release/: yssdk_client.lib
Reference/release_client_yssdk_v20230617/client_yssdk/script/: WIN_x86-32-release.bat  WIN_x86-64-debug.bat  WIN_x86-64-release.bat  arm-aarch64.sh  arm-hisiv500.sh
Reference/release_client_yssdk_v20230617/client_yssdk/test/client_test/: yssdk_client_test.c
Reference/release_client_yssdk_v20230617/client_yssdk/test/erp_test/: CMakeLists.txt  erp_test.c
Reference/release_client_yssdk_v20230617/client_yssdk/test/ptz_test/: yssdk_ptz_test.c
Reference/release_client_yssdk_v20230617/client_yssdk/test/server_test/: CMakeLists.txt
Reference/release_client_yssdk_v20240122/client_yssdk/test/ptz_test/: CMakeLists.txt  yssdk_ptz_test.c
Schematic/: MODULE_V0.9_0.DBK  Module_V0.9.DSN  module_v0.9.opj
Schematic/SC6104HD_06IR/: NS6104_60IRF_BRD_V1.0.PcbDoc  NS6104_60IR_BRD_V1.0.DSN  NS6104_60IR_BRD_V1.0.PcbDoc  NS6104_60IR_BRD_V1.0.job  SC6104HD_06IR.PrjPcb
web/: index.html
web/lang/: en.js  index.js  it.js  ko.js  pt.js  ru.js  zh.js
web/static/css/: app.cb0a4ff1.css  (+3 more)
특허/: 초저조도 카메라 기술 국내특허 현황_특허법인 웰.hwp
(+262 files in other folders)
